--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.4.5",
     "hardhat": "^2.6.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
