--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.4.5",
     "hardhat": "^2.6.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
